# slack-machine-plugin-rbac

./: LICENSE  README.md  pyproject.toml
src/: .gitignore
src/slack_machine_plugin_rbac/: __init__.py
